--- a/mod3/index.html
+++ b/mod3/index.html
@@ -16,11 +16,11 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Food, LLC</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    data-bs-target="#navbarModule3" aria-controls="navbarModule3"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarModule3">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
                             <a class="nav-link text-center border-bottom border-light" href="#chickenMenu">Chicken</a>
